--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sasstocss": "node-sass Base/styleSASS.sass Base/styleCSS.css -w"
+    "sasstocss": "node-sass sass/main.scss css/style.css -w"
   },
   "author": "dhq",
   "license": "ISC",
