--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "serious",
+  "name": "web-serious",
   "version": "1.0.0",
-  "description": "1",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "node-sass -watch sass/main.scss -o css/style.css"
+    "sass": "node-sass sass/main.scss css/style.css -w"
   },
   "repository": {
     "type": "git",
